@@ -3,6 +3,7 @@ Revision history for Weather::Meteo
 0.11
 	More useful error message
 	Handle numbers starting with a decimal point
+	Added rate-limiting support
 
 0.10	Thu Feb 13 07:47:59 EST 2025
 	Better handling of JSON decode errors
